# storysmith

./: LICENSE  README.md  cli.py  main.py  pyproject.toml  pyprojext.toml
frontend/: adventure-generator.html  character-generator.html  creature-generator.html  deity-generator.html  event-generator.html  history.html  index.html  item-generator.html  location-generator.html  monster-generator.html  npc-generator.html  organization-generator.html  region-generator.html  spell-generator.html  styles.css  treasure-generator.html  weather-generator.html
frontend/css/: styles.css
frontend/js/: history.js
frontend/src/: app.tsx  main.tsx
generators/: local.py  openai.py
promts/: adventure.py  base.py  character.py  creature.py  deity.py  event.py  item.py  location.py  monster.py  npc.py  organization.py  region.py  spell.py  treasure.py  weather.py
web/: main.py
