[tool.poetry]
name = "storysmith"
version = "0.1.0"
description = "AI-powered toolkit for tabletop RPG storytelling"
authors = ["JesperKF"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
typer = "^0.12.3"
openai = "^1.30.1"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
black = "^24.4.2"
ruff = "^0.4.3"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"